--- a/RoboTech/Views/Shared/_LayoutAccount.cshtml
+++ b/RoboTech/Views/Shared/_LayoutAccount.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="~/css/site.css">
+    <link rel="shortcut icon" href="~/favicon.png">
 </head>
 <body>
     <div>
