--- a/RoboTech/Areas/Admin/Views/Shared/_SideNavPartialView.cshtml
+++ b/RoboTech/Areas/Admin/Views/Shared/_SideNavPartialView.cshtml
@@ -21,13 +21,27 @@
                     <span class="title">Quản lý đơn hàng</span>
                 </a>
             </li>
-            <li class="nav-item">
-                <a asp-area="Admin" asp-controller="AdminProducts" asp-action="Index">
+            <li class="nav-item dropdown">
+                <a class="dropdown-toggle" href="javascript:void(0);">
                     <span class="icon-holder">
                         <i class="anticon anticon-file"></i>
                     </span>
                     <span class="title">Quản lý sản phẩm</span>
+                    <span class="arrow">
+                        <i class="arrow-icon"></i>
+                    </span>
                 </a>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a asp-area="Admin" asp-controller="AdminProducts" asp-action="Index">Danh sách sản phẩm</a>
+                    </li>
+                    <li>
+                        <a href="form-layouts.html">Form Layouts</a>
+                    </li>
+                    <li>
+                        <a href="form-validation.html">Form Validation</a>
+                    </li>
+                </ul>
             </li>
 
             <li class="nav-item">
