--- a/RoboTech/Views/Home/Index.cshtml
+++ b/RoboTech/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
     <div class="row">
         <div class="col-lg-3 flex-grow-1">
             <div class="heading">
-                <i class="fa fa-bars"></i>&nbsp&nbsp
-                <span>Product Category</span>
+                <i class="fa fa-bars text-white"></i>&nbsp&nbsp
+                <span class="text-white"> Product Category</span>
             </div>
             <ul class="nav-item">
                 <li>
