--- a/RoboTech/wwwroot/css/Bootswatch.css
+++ b/RoboTech/wwwroot/css/Bootswatch.css
@@ -6611,7 +6611,9 @@ textarea.form-control-lg {
     margin-right: -100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    transition: 1s ease-in-out;
+    transition: transform 0.6s ease-in-out;
+    transition-duration: 0.5s;
+    /*transition: 0.1s ease;*/
 }
 
     /*@media (prefers-reduced-motion: reduce) {
