--- a/RoboTech/wwwroot/css/site.css
+++ b/RoboTech/wwwroot/css/site.css
@@ -9,7 +9,7 @@
 }
 
 html {
-    scroll-behavior:smooth;
+    scroll-behavior: smooth;
     font-size: 14px;
 }
 
@@ -27,15 +27,16 @@ html {
 /*LOGO STYLING*/
 a.navbar-brand {
     margin-left: 200px;
-    text-align:center;
-    white-space: pre;   
-    margin-right: 200px;
+    text-align: center;
+    white-space: pre;
     /*word-break: break-all;*/
     font-weight: bold;
     font-size: 190%;
-    color:red;
-    
 }
+
+    a.navbar-brand:hover {
+        color: #42acc3
+    }
 
 
 /*footer*/
@@ -85,6 +86,7 @@ ul {
     list-style: none;
     padding: 0;
 }
+
 .gotopbtn {
     position: fixed;
     bottom: 40px;
@@ -115,11 +117,13 @@ ul {
     color: white;
     font-size: 30px;
 }
+
     .gotopbtn:hover {
         background: #fff;
         box-shadow: 0px 2px 10px 5px #97B1BF;
         color: #000;
     }
+
     .gotopbtn:after {
         content: "";
         /*background: #f1c40f;*/
@@ -132,12 +136,14 @@ ul {
         opacity: 0;
         transition: all 0.8s
     }
+
     .gotopbtn:active:after {
         padding: 0;
         margin: 0;
         opacity: 1;
         transition: 0s
     }
+
 .footer {
     background-color: #24262b;
     padding: 30px 0;
