product slider and product details

--- a/RoboTech/Views/Home/Index.cshtml
+++ b/RoboTech/Views/Home/Index.cshtml
@@ -475,7 +475,148 @@
 
 
 @*product section*@
+
 <div id="product">
-        
+       <div class="headline">
+           <h3> Pc best selling</h3>
+       </div>
+       <ul class="products">
+           <li>
+               <div class="product-item">
+                   <div class="product-top">
+                       <a href="" class="product-thumb">
+                           <img src="~/assets/img/pc1.jpg" alt="" />
+                       </a>
+                       <a href="" class="buy-now"> buy now</a>
+                      @* mua ngay*@
+                   </div>
+                   <div class="product-info">
+                        <a href="" class="product-name">Pc assuz</a>
+                   </div>
+                   <div class="product-price">
+                       3500000vnd
+                   </div>
+               </div>
+           </li>
+        <li>
+            <div class="product-item">
+                <div class="product-top">
+                    <a href="" class="product-thumb">
+                        <img src="~/assets/img/pc1.jpg" alt="" />
+                    </a>
+                    <a href="" class="buy-now"> buy now</a>
+                    @* mua ngay*@
+                </div>
+                <div class="product-info">
+                    <a href="" class="product-name">Pc assuz</a>
+                </div>
+                <div class="product-price">
+                    3500000vnd
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="product-item">
+                <div class="product-top">
+                    <a href="" class="product-thumb">
+                        <img src="~/assets/img/pc1.jpg" alt="" />
+                    </a>
+                    <a href="" class="buy-now"> buy now</a>
+                    @* mua ngay*@
+                </div>
+                <div class="product-info">
+                    <a href="" class="product-name">Pc assuz</a>
+                </div>
+                <div class="product-price">
+                    3500000vnd
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="product-item">
+                <div class="product-top">
+                    <a href="" class="product-thumb">
+                        <img src="~/assets/img/pc1.jpg" alt="" />
+                    </a>
+                    <a href="" class="buy-now"> buy now</a>
+                    @* mua ngay*@
+                </div>
+                <div class="product-info">
+                    <a href="" class="product-name">Pc assuz</a>
+                </div>
+                <div class="product-price">
+                    3500000vnd
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="product-item">
+                <div class="product-top">
+                    <a href="" class="product-thumb">
+                        <img src="~/assets/img/pc1.jpg" alt="" />
+                    </a>
+                    <a href="" class="buy-now"> buy now</a>
+                    @* mua ngay*@
+                </div>
+                <div class="product-info">
+                    <a href="" class="product-name">Pc assuz</a>
+                </div>
+                <div class="product-price">
+                    3500000vnd
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="product-item">
+                <div class="product-top">
+                    <a href="" class="product-thumb">
+                        <img src="~/assets/img/pc1.jpg" alt="" />
+                    </a>
+                    <a href="" class="buy-now"> buy now</a>
+                    @* mua ngay*@
+                </div>
+                <div class="product-info">
+                    <a href="" class="product-name">Pc assuz</a>
+                </div>
+                <div class="product-price">
+                    3500000vnd
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="product-item">
+                <div class="product-top">
+                    <a href="" class="product-thumb">
+                        <img src="~/assets/img/pc1.jpg" alt="" />
+                    </a>
+                    <a href="" class="buy-now"> buy now</a>
+                    @* mua ngay*@
+                </div>
+                <div class="product-info">
+                    <a href="" class="product-name">Pc assuz</a>
+                </div>
+                <div class="product-price">
+                    3500000vnd
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="product-item">
+                <div class="product-top">
+                    <a href="" class="product-thumb">
+                        <img src="~/assets/img/pc1.jpg" alt="" />
+                    </a>
+                    <a href="" class="buy-now"> buy now</a>
+                    @* mua ngay*@
+                </div>
+                <div class="product-info">
+                    <a href="" class="product-name">Pc assuz</a>
+                </div>
+                <div class="product-price">
+                    3500000vnd
+                </div>
+            </div>
+        </li>
+       </ul>
 </div>
     
