--- a/RoboTech/wwwroot/css/site.css
+++ b/RoboTech/wwwroot/css/site.css
@@ -355,6 +355,321 @@ body {
 
 /*Product css*/
 #product {
+   
+    max-width: 1170px;
+    margin:0 auto;
+    line-height:1.15;
+    height:800px;
+    background-color:#b5afaf;
+
+
+}
+.headline {
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom:20px;
+    background-color:#175B6A;  
+   
+}
+/*loi h3 bootwatch*/
+/*.product .headline h3 {
+    font-size: 18px;
+    color: #bebebe;
+    padding: 10px 20px;
+    text-transform: uppercase;
+
+}*/
+.headline {
+    color: #bebebe;
+}
+/*ul.products*/
+.products{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    list-style:none;
+    margin-left:5px;
+    margin-right:5px;
+}
+
+    .products li {
+        flex-basis: 23%;
+        padding-left: 15px;
+        padding-right: 15px;
+        box-sizing: border-box;
+        margin-bottom: 30px;
+       /* border: 1px solid rgb(121, 119, 119);
+        border-radius: 8px;*/
+       background-color:#ffffff;
+    }
+
+.products li img {
+    max-width: 100%;
+    height: auto;
+}
+.product-top {
+    position:relative;
+    overflow:hidden;
+}
+.product-top .product-thumb {
+    display: block;
+}
+.products li:hover .product-top .product-thumb img{
+    filter:opacity(80%);
+}
+.product-top .product-thumb img {
+    display: block;
+}
+.buy-now {
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    display: block;
+    background-color: #446084;
+    color:#ccc;
+    padding: 10px 0px;
+    position: absolute;
+    width:100%;
+    bottom:-40px;
+    transition: 0.25s linear;
+    opacity:0.85;
+}
+.products li:hover .buy-now{
+    bottom:0px;
+}
+
+    .products li .buy-now:hover {
+        color: #fff;
+    }
+
+    .product-info {
+        padding: 10px 0px;
+    }
+.product-info a {
+    display: block;
+    text-decoration: none;
+}
+.product-name {
+    color: #334862;
+    padding: 3px 0px;
+    font-size:20px;
+    text-transform:uppercase;
+}
+.product-price {
+    margin-bottom:20px;
+}
+
+/*Product details css*/
+
+
+.card-wrapper {
+    height: 1100px;
+    box-sizing: border-box;
+    margin: 0 auto;
+    padding: 0;
+    font-family: 'Open Sans', sans-serif;
+}
+img {
+    width:100%;
+    display:block;
+}
+.img-display {
+    overflow: hidden;
+}
+.img-showcase {
+    display: flex;
+    width: 100%;
+    transition: all 0.5s ease;
+}
+.img-showcase img{
+    min-width: 100%;
+}
+.img-select {
+    display:flex;
+}
+.img-item {
+    margin: 0.3rem;
+}
+}
+
+.img-item:nth-child(1),
+.img-item:nth-child(2),
+.img-item:nth-child(3) {
+    margin-right: 0;
+}
+
+.img-item:hover {
+    opacity: 0.8;
+}
+.product-content {
+    padding: 2rem 1rem;
+}
+.product-title {
+    font-size: 3rem;
+    text-transform: capitalize;
+    font-weight: 700;
+    position: relative;
+    color: #12263a;
+    margin: 1rem 0;
+}
+    .product-title::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        height: 4px;
+        width: 80px;
+        background: #12263a;
+    }
+.product-link {
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 0.9rem;
+    display: inline-block;
+    margin-bottom: 0.5rem;
+    background: #256eff;
+    color: #fff;
+    padding: 0 0.3rem;
+    transition: all 0.5s ease;
+}
+    .product-link:hover {
+        opacity: 0.9;
+        color:antiquewhite;
+    }
+.product-rating {
+    color: #ffc107;
+}
+
+    .product-rating span {
+        font-weight: 600;
+        color: #252525;
+    }
+.product-price {
+    margin: 1rem 0;
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+    .product-price span {
+        font-weight: 400;
+    }
+
+.last-price span {
+    color: #f64749;
+    text-decoration: line-through;
+}
+
+.new-price span {
+    color: #256eff;
+}
+.product-detail h2 {
+    text-transform: capitalize;
+    color: #12263a;
+    padding-bottom: 0.6rem;
+}
+
+.product-detail p {
+    font-size: 0.9rem;
+    padding: 0.3rem;
+    opacity: 0.8;
+}
+
+.product-detail ul {
+    margin: 1rem 0;
+    font-size: 0.9rem;
+} 
+.product-detail ul li{
+    margin: 0;
+    list-style: none;
+    background: url("") left center no-repeat;
+    background-size: 18px;
+    padding-left: 1.7rem;
+    margin: 0.4rem 0;
+    font-weight: 600;
+    opacity: 0.9;
+}
+    .product-detail ul li span {
+        font-weight: 400;
+    }
+.purchase-info {
+    margin: 1.5rem 0;
+}
+    .purchase-info input,
+    .purchase-info .btn {
+        border: 1.5px solid #ddd;
+        border-radius: 25px;
+        text-align: center;
+        padding: 0.45rem 0.8rem;
+        outline: 0;
+        margin-right: 0.2rem;
+    }
+    .purchase-info input {
+        width: 70px;
+    }
+
+    .purchase-info .btn {
+        cursor: pointer;
+        color: #fff;
+    }
+        .purchase-info .btn:first-of-type {
+            background: #256eff;
+        }
+        .purchase-info .btn:last-of-type {
+            background: #f64749;
+        }
+        .purchase-info .btn:hover {
+            opacity: 0.9;
+        }
+
+.social-links {
+    display: flex;
+    align-items: center;
+}
+    .social-links a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 32px;
+        height: 32px;
+        color: #000;
+        border: 1px solid #000;
+        margin: 0 0.2rem;
+        border-radius: 50%;
+        text-decoration: none;
+        font-size: 0.8rem;
+        transition: all 0.5s ease;
+    }
+        .social-links a:hover {
+            background: #000;
+            border-color: transparent;
+            color: #fff;
+        }
+@media screen and (min-width: 992px) {
+    .card {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 1.5rem;
+    }
+
+    .card-wrapper {
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .card-wrapper {
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .product-content {
+        padding-top: 0;
+    }
+}
     height: px;
 }
 
