--- a/RoboTech/Views/Home/ProductDetails.cshtml
+++ b/RoboTech/Views/Home/ProductDetails.cshtml
@@ -4,95 +4,78 @@
 @{
 }
 
-
-    <div class="card-wrapper">
-        <div class="card">
-            <div class="product-imgs">
-                <div class="img-display">
-                    <div class="img-showcase">
-                        <img src="~/assets/img/pc1.jpg" />
-                        <img src="~/assets/img/pc2.jpg" />
-                        <img src="~/assets/img/pc3.jpg" />
-                        <img src="~/assets/img/pc4.jpg" />
-                    </div>
-                </div>
-                <div class="img-select">
-                    <div class="img-item">
-                        <a href="#" data-id ="1">
+<div id="product-details">
+    <div class="container">
+        <div class="card-wrapper">
+            <div class="card">
+                <div class="product-imgs">
+                    <div class="img-display">
+                        <div class="img-showcase">
                             <img src="~/assets/img/pc1.jpg" />
-                        </a>
-                    </div>
-                    <div class="img-item">
-                        <a href="#" data-id="2">
                             <img src="~/assets/img/pc2.jpg" />
-                        </a>
-                    </div>
-                    <div class="img-item">
-                        <a href="#" data-id="3">
                             <img src="~/assets/img/pc3.jpg" />
-                        </a>
-                    </div>
-                    <div class="img-item">
-                        <a href="#" data-id="4">
                             <img src="~/assets/img/pc4.jpg" />
-                        </a>
+                        </div>
+                    </div>
+                    <div class="img-select">
+                        <div class="img-item">
+                            <a href="#" data-id="1">
+                                <img src="~/assets/img/pc1.jpg" />
+                            </a>
+                        </div>
+                        <div class="img-item">
+                            <a href="#" data-id="2">
+                                <img src="~/assets/img/pc2.jpg" />
+                            </a>
+                        </div>
+                        <div class="img-item">
+                            <a href="#" data-id="3">
+                                <img src="~/assets/img/pc3.jpg" />
+                            </a>
+                        </div>
+                        <div class="img-item">
+                            <a href="#" data-id="4">
+                                <img src="~/assets/img/pc4.jpg" />
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                @* card-right*@
+                <div class="product-content">
+                    <h2 class="product-title"> name pc</h2>
+                    <div class="product-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span>4.7(21)</span>
+                    </div>
+                    <div class="product-card-price mt-3">
+                        <p class="last-price">Old Price: <span>$257.00</span></p>
+                        <p class="new-price">New Price: <span>$249.00 (5%)</span></p>
+                    </div>
+                    <div class="product-detail">
+                        <h2>about this item: </h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo eveniet veniam tempora fuga tenetur placeat sapiente architecto illum soluta consequuntur, aspernatur quidem at sequi ipsa!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, perferendis eius. Dignissimos, labore suscipit. Unde.</p>
+                        <ul>
+                            <li>Available: <span>in stock</span></li>
+                            <li>Category: <span>Pc</span></li>
+                            <li>Warranty: <span>1 year</span></li>
+                            <li>Shipping Area: <span>All over the world</span></li>
+                            <li>Shipping Fee: <span>Free</span></li>
+                            <li>View: <span>1324</span></li>
+                        </ul>
+                    </div>
+                    <div class="purchase-info">
+                        <input type="number" min="0" value="1">
+                        <button type="button" class="btn">
+                            Add to Cart <i class="fas fa-shopping-cart"></i>
+                        </button>
                     </div>
                 </div>
             </div>
-           @* card-right*@
-           <div class="product-content">
-               <h2 class="product-title"> name pc</h2>
-               <a href="#" class="product-link">vitsit apple store</a>
-               <div class="product-rating"> 
-                   <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-                    <span>4.7(21)</span>
-               </div>
-                <div class="product-card-price">
-                    <p class="last-price">Old Price: <span>$257.00</span></p>
-                    <p class="new-price">New Price: <span>$249.00 (5%)</span></p>
-                </div>
-                <div class="product-detail">
-                    <h2>about this item: </h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo eveniet veniam tempora fuga tenetur placeat sapiente architecto illum soluta consequuntur, aspernatur quidem at sequi ipsa!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, perferendis eius. Dignissimos, labore suscipit. Unde.</p>
-                    <ul>
-                        <li>Color: <span>Black</span></li>
-                        <li>Available: <span>in stock</span></li>
-                        <li>Category: <span>Pc</span></li>
-                        <li>Shipping Area: <span>All over the world</span></li>
-                        <li>Shipping Fee: <span>Free</span></li>
-                    </ul>
-                </div>
-            <div class="purchase-info">
-                <input type="number" min="0" value="1">
-                <button type="button" class="btn">
-                    Add to Cart <i class="fas fa-shopping-cart"></i>
-                </button>
-                <button type="button" class="btn">Compare</button>
-            </div>
-            <div class="social-links">
-                <p>Share At: </p>
-                <a href="#">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="#">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="#">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a href="#">
-                    <i class="fab fa-whatsapp"></i>
-                </a>
-                <a href="#">
-                    <i class="fab fa-pinterest"></i>
-                </a>
-            </div>
-           </div>
         </div>
     </div>
- 
+</div>
