--- a/RoboTech/Views/Product/Index.cshtml
+++ b/RoboTech/Views/Product/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Index</h1>
@@ -31,7 +31,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.PromotionPrice)
             </th>
-         
             <th>
                 @Html.DisplayNameFor(model => model.Quantity)
             </th>
@@ -48,9 +47,6 @@
                 @Html.DisplayNameFor(model => model.ViewCount)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.BrandId)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.CreatedBy)
             </th>
             <th>
@@ -61,6 +57,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.UpdatedDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Brand)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Cate)
@@ -105,9 +104,6 @@
                 @Html.DisplayFor(modelItem => item.ViewCount)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.BrandId)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.CreatedBy)
             </td>
             <td>
@@ -118,6 +114,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.UpdatedDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Brand.Id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Cate.CateId)
