--- a/RoboTech/Views/Shared/_Layout.cshtml
+++ b/RoboTech/Views/Shared/_Layout.cshtml
@@ -18,11 +18,12 @@
     <script src="https://kit.fontawesome.com/3518e7db2c.js" crossorigin="anonymous"></script>
     
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom py-4 box-shadow">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ROBOTECH</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/logo.png" width="50" height="80"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
